--- a/styles.css
+++ b/styles.css
@@ -22,3 +22,11 @@ input{
     border: 3px solid #ccc;
     outline: none !important;
 }
+
+.valid{
+    border:1px green solid;
+}
+
+.invalid{
+    border:1px red solid;
+}
